--- a/workshop/css/funny_table_minion.css
+++ b/workshop/css/funny_table_minion.css
@@ -1,3 +1,7 @@
+table{
+    border-collapse: collapse;
+    margin: auto;
+}
 .yellow{
     background-color: yellow;
 }
@@ -8,4 +12,13 @@ td{
 }
 .gray{
     background-color: gray;
+}
+.black{
+    background-color: black;
+}
+.blue{
+    background-color: blue;
+}
+.green{
+    background-color: green;
 }
